リンク修正

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               <a class="header__link" href="campaign-page.html"><span>Campaign</span>キャンペーン</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="about-us-page.html"><span>About us</span>私たちについて</a>
+              <a class="header__link" href="aboutus-page.html"><span>About us</span>私たちについて</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Information</span>ダイビング情報</a>
@@ -314,7 +314,7 @@
             <div class="about-us__container-box">
               <p class="about-us__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               <div class="about-us__button-layout">
-                <a href="about-us-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
+                <a href="aboutus-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
               </div>
             </div>
           </div>
