--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -324,9 +324,11 @@
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                 </div>
               </div>
-              <a href="#" class="contact__top-button js-top-button">
-                <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン" />
-              </a>
+              <div class="contact__top-button js-top-button">
+                <a href="">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                </a>
+              </div>
             </div>
           </div>
         </div>
