--- a/src/index.html
+++ b/src/index.html
@@ -571,16 +571,18 @@
               <div class="contact__button-layout">
                 <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
               </div>
-              <a href="#" class="contact__top-button js-top-button">
-                <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン" />
-              </a>
+              <div class="contact__top-button js-top-button">
+                <a href="">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
     <!--フッター-->
-    <footer class="footer footer-top js-footer">
+    <footer class="footer footer-top">
       <div class="footer__inner inner">
         <div class="footer__title footer-title">
           <a href="#" class="footer-title__name-layout">
