--- a/src/index.html
+++ b/src/index.html
@@ -632,7 +632,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer-menu__container-right">
+          <div class="footer-menu__right">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-a">
