--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -327,7 +327,7 @@
         </div>
       </div>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-top">
+      <section id="contact" class="contact contact-campaign-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
