--- a/src/index.html
+++ b/src/index.html
@@ -301,12 +301,14 @@
             <p class="section-title__sub">About us</p>
             <h2 class="section-title__main">私たちについて</h2>
           </div>
-          <div class="about-us__img">
-            <div class="about-us__img-small">
-              <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
-            </div>
-            <div class="about-us__img-big">
-              <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
+          <div class="about-us__img-box">
+            <div class="about-us__img">
+              <div class="about-us__img-small">
+                <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
+              </div>
+              <div class="about-us__img-big">
+                <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
+              </div>
             </div>
           </div>
           <div class="about-us__container">
@@ -573,7 +575,7 @@
               </div>
               <div class="contact__top-button js-top-button">
                 <a href="">
-                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン" />
                 </a>
               </div>
             </div>
