--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -273,7 +273,7 @@
       </section>
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-top">
+      <section id="contact" class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
