--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -202,8 +202,7 @@
                   <p class="campaign-card__title">ライセンス講習</p>
                   <p class="campaign-card__title-sub-large">ライセンス取得</p>
                 </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
+                <div class="campaign-card__price-campaign">
                   <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card__price-box">
                     <p class="campaign-card__price-old">¥56,000</p>
@@ -231,8 +230,7 @@
                   <p class="campaign-card__title">体験ダイビング</p>
                   <p class="campaign-card__title-sub-large">貸切体験ダイビング</p>
                 </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
+                <div class="campaign-card__price-campaign">
                   <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card__price-box">
                     <p class="campaign-card__price-old">¥24,000</p>
@@ -260,8 +258,7 @@
                   <p class="campaign-card__title">体験ダイビング</p>
                   <p class="campaign-card__title-sub-large">ナイトダイビング</p>
                 </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
+                <div class="campaign-card__price-campaign">
                   <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card__price-box">
                     <p class="campaign-card__price-old">¥10,000</p>
@@ -289,8 +286,7 @@
                   <p class="campaign-card__title">ファンダイビング</p>
                   <p class="campaign-card__title-sub-large">貸切ファンダイビング</p>
                 </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
+                <div class="campaign-card__price-campaign">
                   <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
                   <div class="campaign-card__price-box">
                     <p class="campaign-card__price-old">¥20,000</p>
