アバウトアスハンバーガー修正

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__ js-hamburger md-show">
+        <div class="header__hamburger js-hamburger md-show">
           <div class="header__hamburger-layout">
             <span></span>
             <span></span>
