--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-a">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="campaign-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -88,7 +88,7 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="aboutus-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
