インフォメーション追加

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -48,7 +48,7 @@
               <a class="header__link" href="aboutus-page.html"><span>About us</span>私たちについて</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Information</span>ダイビング情報</a>
+              <a class="header__link" href="information-page.html"><span>Information</span>ダイビング情報</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Blog</span>ブログ</a>
@@ -95,7 +95,7 @@
                 </ul>
                 <ul class="drawer-menu__items-b">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="information-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
