--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
               <a class="header__link" href="aboutus-page.html"><span>About us</span>私たちについて</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Information</span>ダイビング情報</a>
+              <a class="header__link" href="information-page.html"><span>Information</span>ダイビング情報</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Blog</span>ブログ</a>
@@ -95,7 +95,7 @@
                 </ul>
                 <ul class="drawer-menu__items-b">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="information-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
@@ -337,7 +337,7 @@
               <h3 class="information__box-title">ライセンス講習</h3>
               <p class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="md-none" />の「正規店」として店舗登録されています。<br />正規登録店として、安心安全に初めての方でも安心安全にライセン<br class="md-none" />ス取得をサポート致します。</p>
               <div class="information__button-layout">
-                <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+                <a href="information-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
               </div>
             </div>
           </div>
