--- a/src/information-page.html
+++ b/src/information-page.html
@@ -48,7 +48,7 @@
               <a class="header__link" href="aboutus-page.html"><span>About us</span>私たちについて</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="information-page.html"><span>Information</span>ダイビング情報</a>
+              <a class="header__link" href="#"><span>Information</span>ダイビング情報</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Blog</span>ブログ</a>
@@ -95,7 +95,7 @@
                 </ul>
                 <ul class="drawer-menu__items-b">
                   <li class="drawer-menu__item">
-                    <a href="information-page.html" class="drawer-menu__link-a">
+                    <a href="#" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">Campaign</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">About us</h1>
           </div>
           <picture class="sub-page-mv__picture">
-            <source srcset="./assets/images/campaign-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/campaign-page-sp-img.jpg" alt="2匹の黄色い魚が泳いでいる様子" />
+            <source srcset="./assets/images/info-page-pc-img.jpg" media="(min-width: 768px)" />
+            <img src="./assets/images/info-page-sp-img.jpg" alt="シーサーがこちらを見ている様子" />
           </picture>
         </div>
       </section>
@@ -173,157 +173,11 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>キャンペーン</span>
-        </div>
-      </div>
-      <!--タブ-->
-      <div class="campaign-page__tab campaign-page__tab-top">
-        <div class="campaign-page__tab-inner inner">
-          <div class="campaign-page__tab-layout">
-            <ul class="campaign-page__tab-items campaign-tab">
-              <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
-              <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
-              <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
-              <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!--コンテンツ-->
-      <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
-        <div class="campaign-page-contents__inner inner">
-          <ul class="campaign-page-contents__items campaign-page-card">
-            <li class="campaign-page-card__item campaign-card">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">ライセンス講習</p>
-                  <p class="campaign-card__title-sub-large">ライセンス取得</p>
-                </div>
-                <div class="campaign-card__price-campaign">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥56,000</p>
-                    <p class="campaign-card__campaign-price-new">¥46,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                </div>
-              </div>
-            </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">体験ダイビング</p>
-                  <p class="campaign-card__title-sub-large">貸切体験ダイビング</p>
-                </div>
-                <div class="campaign-card__price-campaign">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥24,000</p>
-                    <p class="campaign-card__campaign-price-new">¥18,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                </div>
-              </div>
-            </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">体験ダイビング</p>
-                  <p class="campaign-card__title-sub-large">ナイトダイビング</p>
-                </div>
-                <div class="campaign-card__price-campaign">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥10,000</p>
-                    <p class="campaign-card__campaign-price-new">¥8,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                </div>
-              </div>
-            </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">ファンダイビング</p>
-                  <p class="campaign-card__title-sub-large">貸切ファンダイビング</p>
-                </div>
-                <div class="campaign-card__price-campaign">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥20,000</p>
-                    <p class="campaign-card__campaign-price-new">¥16,000</p>
-                  </div>
-                  <div class="campaign-card__text-box md-none">
-                    <p class="campaign-card__text-main">
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                    </p>
-                    <div class="campaign-card__date">2023/6/1-9/30</div>
-                    <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                  </div>
-                  <div class="campaign-card__layout md-none">
-                    <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <div class="pagination pagination-top">
-        <div class="pagination__inner inner">
-          <div class="pagination-nav">
-            <a class="pagination__prev" href="#"></a>
-            <span class="pagination__current">1</span>
-            <a class="page larger" href="#">2</a>
-            <a class="page larger" href="#">3</a>
-            <a class="page larger" href="#">4</a>
-            <a class="page larger md-none" href="#">5</a>
-            <a class="page larger md-none" href="#">6</a>
-            <a class="pagination__next" href="#"></a>
-          </div>
+          <span>私たちについて</span>
         </div>
       </div>
       <!--コンタクト-->
-      <section id="contact" class="contact contact-campaign-top">
+      <section id="contact" class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
