インフォメーション作成

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -406,7 +406,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="campaign-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
@@ -414,14 +414,14 @@
               <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
               <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="aboutus-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">私たちについて</p>
                 </a>
               </li>
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="information-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
