--- a/src/information-page.html
+++ b/src/information-page.html
@@ -48,7 +48,7 @@
               <a class="header__link" href="aboutus-page.html"><span>About us</span>私たちについて</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Information</span>ダイビング情報</a>
+              <a class="header__link" href="information-page.html"><span>Information</span>ダイビング情報</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Blog</span>ブログ</a>
@@ -95,7 +95,7 @@
                 </ul>
                 <ul class="drawer-menu__items-b">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="information-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">About us</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">Information</h1>
           </div>
           <picture class="sub-page-mv__picture">
             <source srcset="./assets/images/info-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/info-page-sp-img.jpg" alt="シーサーがこちらを見ている様子" />
+            <img src="./assets/images/info-page-sp-img.jpg" alt="黄色い魚の群れの中をダイバーが泳いでいる様子" />
           </picture>
         </div>
       </section>
@@ -173,9 +173,61 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>私たちについて</span>
+          <span>ダイビング情報</span>
         </div>
       </div>
+      <!--タブ-->
+      <div class="information-page information-page-top">
+        <div class="information-page__inner inner">
+          <div class="information-page__tab information-tab">
+            <div class="information-tab__list">
+              <button class="information-tab__button js-tab-button is-active">ライセンス<br class="md-show">講習</button>
+              <button class="information-tab__button js-tab-button">ファン<br class="md-show">ダイビング</button>
+              <button class="information-tab__button js-tab-button">体験<br class="md-show">ダイビング</button>
+            </div>
+            <div class="information-tab__contents">
+              <div class="information-tab__content js-tab-content is-active">
+                <ul class="information-tab__cards information-cards">
+                  <li class="information-cards__card information-card">
+                    <div class="information-card__body">
+                      <h3 class="information-card__title">ライセンス講習</h3>
+                      <p class="information-card__text">泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+                    </div>
+                    <div class="information-card__img">
+                      <img src="./assets/images/info-page-tab-img1.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="information-tab__content js-tab-content">
+                <ul class="information-tab__cards information-cards">
+                  <li class="information-cards__card information-card">
+                    <div class="information-card__body">
+                      <h3 class="information-card__title">ファンダイビング</h3>
+                      <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
+                    </div>
+                    <div class="information-card__img">
+                      <img src="./assets/images/info-page-tab-img2.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="information-tab__content js-tab-content">
+                <ul class="information-tab__cards information-cards">
+                  <li class="information-cards__card information-card">
+                    <div class="information-card__body">
+                      <h3 class="information-card__title">体験ダイビング</h3>
+                      <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
+                    </div>
+                    <div class="information-card__img">
+                      <img src="./assets/images/info-page-tab-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       <!--コンタクト-->
       <section id="contact" class="contact contact-about-top">
         <div class="contact__inner inner">
