--- a/src/information-page.html
+++ b/src/information-page.html
@@ -180,21 +180,36 @@
       <div class="information-page information-page-top">
         <div class="information-page__inner inner">
           <div class="information-page__tab information-tab">
-            <div class="information-tab__list">
-              <button class="information-tab__button js-tab-button is-active">ライセンス<br class="md-show">講習</button>
-              <button class="information-tab__button js-tab-button">ファン<br class="md-show">ダイビング</button>
-              <button class="information-tab__button js-tab-button">体験<br class="md-show">ダイビング</button>
-            </div>
+            <ul class="information-tab__list">
+              <li class="information-tab__button js-tab-button is-active">
+                <div class="information-tab__button-img md-none">
+                  <img class="color-change" src="./assets/images/tab-logo1.svg" alt="クジラのアイコン">
+                </div>
+                <h2 class="information-tab__title">ライセンス<br class="md-show">講習</h2>
+              </li>
+              <li class="information-tab__button js-tab-button">
+                <div class="information-tab__button-img md-none">
+                  <img class="color-change" src="./assets/images/tab-logo2.svg" alt="サメのアイコン">
+                </div>
+                <h2 class="information-tab__title">ファン<br class="md-show">ダイビング</h2>
+              </li>
+              <li class="information-tab__button js-tab-button">
+                <div class="information-tab__button-img md-none">
+                  <img class="color-change" src="./assets/images/tab-logo3.svg" alt="魚のアイコン">
+                </div>
+                <h2 class="information-tab__title">体験<br class="md-show">ダイビング</h2>
+              </li>
+            </ul>
             <div class="information-tab__contents">
               <div class="information-tab__content js-tab-content is-active">
                 <ul class="information-tab__cards information-cards">
                   <li class="information-cards__card information-card">
                     <div class="information-card__body">
                       <h3 class="information-card__title">ライセンス講習</h3>
-                      <p class="information-card__text">泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+                      <p class="information-card__text">泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！ス<br class="md-none">キューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
                     </div>
                     <div class="information-card__img">
-                      <img src="./assets/images/info-page-tab-img1.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                      <img src="./assets/images/info-page-tab-img1.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" />
                     </div>
                   </li>
                 </ul>
