ブログの人気記事まで作成

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -51,7 +51,7 @@
               <a class="header__link" href="information-page.html"><span>Information</span>ダイビング情報</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Blog</span>ブログ</a>
+              <a class="header__link" href="blog-page.html"><span>Blog</span>ブログ</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Voice</span>お客様の声</a>
@@ -103,7 +103,7 @@
                   <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="blog-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">ブログ</p>
                     </a>
                   </li>
@@ -429,7 +429,7 @@
               <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
               <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="blog-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">ブログ</p>
                 </a>
               </li>
