ブログのsp見出しキャンペーンまで作成

--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -370,6 +370,75 @@
               </div>
               <h2 class="blog-heading__title">口コミ</h2>
             </div>
+            <div class="blog-heading__cards-review blog-heading-cards-review">
+              <div class="blog-heading-cards-review__item-box blog-heading-card-review">
+                <div class="blog-heading-card-review__item">
+                  <div class="blog-heading-card-review__container">
+                    <div class="blog-heading-card-review__img">
+                      <img src="./assets/images/review.jpg" alt="腕を組んだ30代カップルがソファーに座っている様子" />
+                    </div>
+                    <div class="blog-heading-card-review__title-box">
+                      <div class="blog-heading-card-review__title-box1">
+                        <p class="blog-heading-card-review__title-sub">20代(女性)</p>
+                      </div>
+                      <div class="blog-heading-card-review__title-box2">
+                        <p class="blog-heading-card-review__title-text">ここにタイトルが入ります。ここにタイトル</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blog-heading__button-layout">
+              <a href="blog-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+            </div>
+          </div>
+          <div class="blog-heading__container">
+            <div class="blog-heading__title-box">
+              <div class="blog-heading__icon">
+                <img src="./assets/images/blog-page-logo.svg" alt="クジラのアイコン">
+              </div>
+              <h2 class="blog-heading__title">キャンペーン</h2>
+            </div>
+            <div class="blog-heading__cards-campaign blog-heading-cards-campaign">
+              <a href="#" class="blog-heading__card-campaign blog-heading-card-campaign">
+                <div class="blog-heading-card-campaign__img">
+                  <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子" />
+                </div>
+                <div class="blog-heading-card-campaign__body">
+                  <div class="blog-heading-card-campaign__text">
+                    <p class="blog-heading-card-campaign__title-sub">ライセンス取得</p>
+                  </div>
+                  <div class="blog-heading-card-campaign__price">
+                    <p class="blog-heading-card-campaign__price-text">全部コミコミ(お一人様)</p>
+                    <div class="blog-heading-card-campaign__price-box">
+                      <p class="blog-heading-card-campaign__price-old">¥56,000</p>
+                      <p class="blog-heading-card-campaign__price-new">¥46,000</p>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="blog-heading__card-campaign blog-heading-card-campaign">
+                <div class="blog-heading-card-campaign__img">
+                  <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
+                </div>
+                <div class="blog-heading-card-campaign__body">
+                  <div class="blog-heading-card-campaign__text">
+                    <p class="blog-heading-card-campaign__title-sub">貸切体験ダイビング</p>
+                  </div>
+                  <div class="blog-heading-card-campaign__price">
+                    <p class="blog-heading-card-campaign__price-text">全部コミコミ(お一人様)</p>
+                    <div class="blog-heading-card-campaign__price-box">
+                      <p class="blog-heading-card-campaign__price-old">¥24,000</p>
+                      <p class="blog-heading-card-campaign__price-new">¥18,000</p>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="blog-heading__button-layout">
+              <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+            </div>
           </div>
         </div>
       </section>
