--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -440,6 +440,14 @@
               <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
             </div>
           </div>
+          <div class="blog-heading__container">
+            <div class="blog-heading__title-box">
+              <div class="blog-heading__icon">
+                <img src="./assets/images/blog-page-logo.svg" alt="クジラのアイコン">
+              </div>
+              <h2 class="blog-heading__title">アーカイブ</h2>
+            </div>
+            </div>
         </div>
       </section>
 
