ブログspピクパまで

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -310,7 +310,7 @@
       </section>
       <div class="pagination pagination-top">
         <div class="pagination__inner inner">
-          <div class="pagination-nav">
+          <div class="pagination__nav">
             <a class="pagination__prev" href="#"></a>
             <span class="pagination__current">1</span>
             <a class="page larger" href="#">2</a>
