--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -320,7 +320,7 @@
             </div>
             <div class="blog-page__container-right">
               <div class="blog-heading blog-heading-top">
-                <div class="blog-heading__inner inner">
+                <div class="blog-heading__inner">
                   <div class="blog-heading__container">
                     <div class="blog-heading__title-box">
                       <div class="blog-heading__icon">
@@ -394,7 +394,7 @@
                       <a href="blog-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                     </div>
                   </div>
-                  <div class="blog-heading__container">
+                  <div class="blog-heading__container-b">
                     <div class="blog-heading__title-box">
                       <div class="blog-heading__icon">
                         <img src="./assets/images/blog-page-logo.svg" alt="クジラのアイコン" />
@@ -441,7 +441,7 @@
                       <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                     </div>
                   </div>
-                  <div class="blog-heading__container">
+                  <div class="blog-heading__container-c">
                     <div class="blog-heading__title-box">
                       <div class="blog-heading__icon">
                         <img src="./assets/images/blog-page-logo.svg" alt="クジラのアイコン" />
