--- a/src/information-page.html
+++ b/src/information-page.html
@@ -183,21 +183,21 @@
             <ul class="information-tab__list">
               <li class="information-tab__button js-tab-button is-active">
                 <div class="information-tab__button-img md-none">
-                  <img class="color-change" src="./assets/images/tab-logo1.svg" alt="クジラのアイコン">
+                  <img class="color-change" src="./assets/images/tab-logo1.svg" alt="クジラのアイコン" />
                 </div>
-                <h2 class="information-tab__title">ライセンス<br class="md-show">講習</h2>
+                <h2 class="information-tab__title">ライセンス<br class="md-show" />講習</h2>
               </li>
               <li class="information-tab__button js-tab-button">
                 <div class="information-tab__button-img md-none">
-                  <img class="color-change" src="./assets/images/tab-logo2.svg" alt="サメのアイコン">
+                  <img class="color-change" src="./assets/images/tab-logo2.svg" alt="サメのアイコン" />
                 </div>
-                <h2 class="information-tab__title">ファン<br class="md-show">ダイビング</h2>
+                <h2 class="information-tab__title">ファン<br class="md-show" />ダイビング</h2>
               </li>
               <li class="information-tab__button js-tab-button">
                 <div class="information-tab__button-img md-none">
-                  <img class="color-change" src="./assets/images/tab-logo3.svg" alt="魚のアイコン">
+                  <img class="color-change" src="./assets/images/tab-logo3.svg" alt="魚のアイコン" />
                 </div>
-                <h2 class="information-tab__title">体験<br class="md-show">ダイビング</h2>
+                <h2 class="information-tab__title">体験<br class="md-show" />ダイビング</h2>
               </li>
             </ul>
             <div class="information-tab__contents">
@@ -206,10 +206,14 @@
                   <li class="information-cards__card information-card">
                     <div class="information-card__body">
                       <h3 class="information-card__title">ライセンス講習</h3>
-                      <p class="information-card__text">泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！ス<br class="md-none">キューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+                      <p class="information-card__text">
+                        泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！ス<br
+                          class="md-none"
+                        />キューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！
+                      </p>
                     </div>
                     <div class="information-card__img">
-                      <img src="./assets/images/info-page-tab-img1.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" />
+                      <img src="./assets/images/info-page-tab-img1.jpg" alt="4人のダイバーが潜る前にプロの指導を受けている様子" />
                     </div>
                   </li>
                 </ul>
@@ -222,7 +226,7 @@
                       <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
                     </div>
                     <div class="information-card__img">
-                      <img src="./assets/images/info-page-tab-img2.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                      <img src="./assets/images/info-page-tab-img2.jpg" alt="たくさんの魚が海中を泳いでいる様子" />
                     </div>
                   </li>
                 </ul>
@@ -235,7 +239,7 @@
                       <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
                     </div>
                     <div class="information-card__img">
-                      <img src="./assets/images/info-page-tab-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="information-card__img" />
+                      <img src="./assets/images/info-page-tab-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子"/>
                     </div>
                   </li>
                 </ul>
@@ -243,6 +247,7 @@
             </div>
           </div>
         </div>
+      </div>
       <!--コンタクト-->
       <section id="contact" class="contact contact-about-top">
         <div class="contact__inner inner">
@@ -297,7 +302,7 @@
               </div>
               <div class="contact__top-button js-top-button">
                 <a href="">
-                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン" />
                 </a>
               </div>
             </div>
