--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
           <div class="drawer-menu__inner">
             <div class="drawer-menu__container">
               <div class="drawer-menu__container-left">
-                <ul class="drawer-menu__items-a">
+                <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
                     <a href="campaign-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">キャンペーン</p>
@@ -93,7 +93,7 @@
                     </a>
                   </li>
                 </ul>
-                <ul class="drawer-menu__items-b">
+                <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
                     <a href="information-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">ダイビング情報</p>
@@ -110,7 +110,7 @@
                 </ul>
               </div>
               <div class="drawer-menu__container-right">
-                <ul class="drawer-menu__items-a">
+                <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
                     <a href="#" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">お客様の声</p>
@@ -125,7 +125,7 @@
                   <li class="drawer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
                 </ul>
-                <ul class="drawer-menu__items-b">
+                <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
                     <a href="#" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">よくある質問</p>
