--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -67,8 +67,8 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger js-hamburger md-show">
-          <div class="header__hamburger-layout">
+        <div class="header__hamburger-layout">
+          <div class="header__hamburger js-hamburger md-show">
             <span></span>
             <span></span>
             <span></span>
@@ -177,16 +177,14 @@
         </div>
       </div>
       <!--タブ-->
-      <div class="campaign-page__tab campaign-page__tab-top">
-        <div class="campaign-page__tab-inner inner">
-          <div class="campaign-page__tab-layout">
-            <ul class="campaign-page__tab-items campaign-tab">
-              <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
-              <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
-              <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
-              <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
-            </ul>
-          </div>
+      <div class="campaign-page-tab campaign-page-tab-top">
+        <div class="campaign-page-tab__inner inner">
+          <ul class="campaign-page-tab__items campaign-tab">
+            <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
+            <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
+            <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
+            <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
+          </ul>
         </div>
       </div>
       <!--コンテンツ-->
@@ -376,7 +374,7 @@
               </div>
               <div class="contact__top-button js-top-button">
                 <a href="">
-                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン" />
                 </a>
               </div>
             </div>
@@ -394,10 +392,10 @@
             </h3>
           </a>
           <div class="footer-title__logo-box">
-            <a class="footer-title__facebook-logo">
+            <a href="#" target="_blank"  class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a class="footer-title__instagram-logo">
+            <a href="#" target="_blank"  class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
