--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -67,8 +67,8 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger js-hamburger md-show">
-          <div class="header__hamburger-layout">
+        <div class="header__hamburger-layout">
+          <div class="header__hamburger js-hamburger md-show">
             <span></span>
             <span></span>
             <span></span>
@@ -548,10 +548,10 @@
             </h3>
           </a>
           <div class="footer-title__logo-box">
-            <a class="footer-title__facebook-logo">
+            <a href="#" target="_blank"  class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a class="footer-title__instagram-logo">
+            <a href="#" target="_blank"  class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
