--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -67,8 +67,8 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger-layout">
-          <div class="header__hamburger js-hamburger md-show">
+        <div class="header__hamburger-layout  md-show">
+          <div class="header__hamburger js-hamburger">
             <span></span>
             <span></span>
             <span></span>
