--- a/src/information-page.html
+++ b/src/information-page.html
@@ -112,7 +112,7 @@
               <div class="drawer-menu__container-right">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="voice-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">お客様の声</p>
                     </a>
                   </li>
@@ -364,7 +364,7 @@
           <div class="footer-menu__right">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="voice-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">お客様の声</p>
                 </a>
               </li>
