--- a/src/blog-page-detail.html
+++ b/src/blog-page-detail.html
@@ -54,7 +54,7 @@
               <a class="header__link" href="blog-page.html"><span>Blog</span>ブログ</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Voice</span>お客様の声</a>
+              <a class="header__link" href="voice-page.html"><span>Voice</span>お客様の声</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>Price</span>料金一覧</a>
@@ -112,7 +112,7 @@
               <div class="drawer-menu__container-right">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-a">
+                    <a href="voice-page.html" class="drawer-menu__link-a">
                       <p class="drawer__logo-text">お客様の声</p>
                     </a>
                   </li>
@@ -509,7 +509,7 @@
           <div class="footer-menu__right">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+                <a href="voice-page.html" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">お客様の声</p>
                 </a>
               </li>
