プライスページ追加

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -57,7 +57,7 @@
               <a class="header__link" href="voice-page.html"><span>Voice</span>お客様の声</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Price</span>料金一覧</a>
+              <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
@@ -117,7 +117,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="price-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">料金一覧</p>
                     </a>
                   </li>
