--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -57,7 +57,7 @@
               <a class="header__link" href="voice-page.html"><span>Voice</span>お客様の声</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Price</span>料金一覧</a>
+              <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
@@ -117,7 +117,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="price-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">料金一覧</p>
                     </a>
                   </li>
@@ -391,7 +391,7 @@
                       </div>
                     </div>
                     <div class="blog-heading__button-layout">
-                      <a href="blog-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+                      <a href="voice-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                     </div>
                   </div>
                   <div class="blog-heading__container-campaign">
@@ -597,7 +597,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="price-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
