--- a/src/price-page.html
+++ b/src/price-page.html
@@ -54,10 +54,10 @@
               <a class="header__link" href="blog-page.html"><span>Blog</span>ブログ</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="voice-page.html"><span>Voice</span>お客様の声</a>
+              <a class="header__link" href="price-page.html"><span>Voice</span>お客様の声</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
+              <a class="header__link" href="#"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger-layout  md-show">
+        <div class="header__hamburger-layout md-show">
           <div class="header__hamburger js-hamburger">
             <span></span>
             <span></span>
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">About us</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">Voice</h1>
           </div>
           <picture class="sub-page-mv__picture">
-            <source srcset="./assets/images/aboutus-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/aboutus-page-sp-img.jpg" alt="シーサーがこちらを見ている様子" />
+            <source srcset="./assets/images/price-page-pc-img.jpg" media="(min-width: 768px)" />
+            <img src="./assets/images/price-page-sp-img.jpg" alt="1人のダイバーが海面をシュノーケルを着けながら泳いでいる様子" />
           </picture>
         </div>
       </section>
@@ -173,107 +173,13 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>私たちについて</span>
+          <span>料金一覧</span>
         </div>
       </div>
-      <!--アバウトアス-->
-      <section id="about-us-page" class="about-us-page about-us-page-top">
-        <div class="about-us-page__inner inner">
-          <div class="about-us-page__img">
-            <div class="about-us-page__img-small md-none">
-              <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
-            </div>
-            <div class="about-us-page__img-big">
-              <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
-            </div>
-          </div>
-          <div class="about-us-page__container">
-            <h3 class="about-us-page__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
-            <div class="about-us-page__container-box">
-              <p class="about-us-page__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--ギャラリー-->
-      <section id="gallery" class="gallery gallery-top">
-        <div class="gallery__inner inner">
-          <div class="gallery__title section-title">
-            <p class="section-title__sub">Gallery</p>
-            <h2 class="section-title__main">フォト</h2>
-          </div>
-          <ul class="gallery__list gallery-list">
-            <li class="gallery-list__item js-modal-open" data-target="1">
-              <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りをオレンジ色の魚達が泳いでいる様子" />
-            </li>
-            <li class="gallery-list__item js-modal-open" data-target="2">
-              <img src="./assets/images/gallery2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
-            </li>
-            <li class="gallery-list__item js-modal-open" data-target="3">
-              <img src="./assets/images/gallery3.jpg" alt="2匹の熱帯魚が泳いでいる様子" />
-            </li>
-            <li class="gallery-list__item js-modal-open" data-target="4">
-              <img src="./assets/images/gallery4.jpg" alt="1匹の熱帯魚が泳いでいる様子" />
-            </li>
-            <li class="gallery-list__item js-modal-open" data-target="5">
-              <img src="./assets/images/gallery5.jpg" alt="熱帯魚が群れで泳いでいる様子" />
-            </li>
-            <li class="gallery-list__item js-modal-open" data-target="6">
-              <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを黄色い魚が泳いでいる様子" />
-            </li>
-          </ul>
-        </div>
-        <!-- モーダル -->
-        <div class="gallery__modal gallery-modal">
-          <ul class="gallery-modal__items">
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-1">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りをオレンジ色の魚達が泳いでいる様子" />
-                </div>
-              </div>
-            </li>
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-2">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
-                </div>
-              </div>
-            </li>
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-3">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery3.jpg" alt="2匹の熱帯魚が泳いでいる様子" />
-                </div>
-              </div>
-            </li>
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-4">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery4.jpg" alt="1匹の熱帯魚が泳いでいる様子" />
-                </div>
-              </div>
-            </li>
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-5">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery5.jpg" alt="熱帯魚が群れで泳いでいる様子" />
-                </div>
-              </div>
-            </li>
-            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-6">
-              <div class="gallery-modal__inner inner">
-                <div class="gallery-modal__img">
-                  <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを黄色い魚が泳いでいる様子" />
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
+      <!--タブ-->
 
       <!--コンタクト-->
-      <section id="contact" class="contact contact-about-top">
+      <section id="contact" class="contact contact-campaign-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
@@ -326,7 +232,7 @@
               </div>
               <div class="contact__top-button js-top-button">
                 <a href="">
-                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン">
+                  <img src="./assets/images/contact-top-button.svg" alt="トップボタン" />
                 </a>
               </div>
             </div>
@@ -344,10 +250,10 @@
             </h3>
           </a>
           <div class="footer-title__logo-box">
-            <a href="#" target="_blank"  class="footer-title__facebook-logo">
+            <a href="#" target="_blank" class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a href="#" target="_blank"  class="footer-title__instagram-logo">
+            <a href="#" target="_blank" class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
