--- a/src/price-page.html
+++ b/src/price-page.html
@@ -54,10 +54,10 @@
               <a class="header__link" href="blog-page.html"><span>Blog</span>ブログ</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="price-page.html"><span>Voice</span>お客様の声</a>
+              <a class="header__link" href="voice-page.html"><span>Voice</span>お客様の声</a>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#"><span>Price</span>料金一覧</a>
+              <a class="header__link" href="price-page.html"><span>Price</span>料金一覧</a>
             </li>
             <li class="header__item">
               <a class="header__link" href="#"><span>FAQ</span>よくある質問</a>
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="header__hamburger-layout md-show">
+        <div class="header__hamburger-layout  md-show">
           <div class="header__hamburger js-hamburger">
             <span></span>
             <span></span>
@@ -159,11 +159,11 @@
       <section id="sub-page-mv" class="sub-page-mv">
         <div class="sub-page-mv__inner">
           <div class="sub-page-mv__title">
-            <h1 class="sub-page-mv__title-main page-section-title">Voice</h1>
+            <h1 class="sub-page-mv__title-main page-section-title">Price</h1>
           </div>
           <picture class="sub-page-mv__picture">
             <source srcset="./assets/images/price-page-pc-img.jpg" media="(min-width: 768px)" />
-            <img src="./assets/images/price-page-sp-img.jpg" alt="1人のダイバーが海面をシュノーケルを着けながら泳いでいる様子" />
+            <img src="./assets/images/price-page-sp-img.jpg" alt="黄色い魚の群れの中をダイバーが泳いでいる様子" />
           </picture>
         </div>
       </section>
@@ -173,13 +173,11 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>料金一覧</span>
+          <span>ダイビング情報</span>
         </div>
       </div>
-      <!--タブ-->
-
       <!--コンタクト-->
-      <section id="contact" class="contact contact-campaign-top">
+      <section id="contact" class="contact contact-about-top">
         <div class="contact__inner inner">
           <div class="contact__container">
             <div class="contact__box contact-box">
@@ -253,7 +251,7 @@
             <a href="#" target="_blank" class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a href="#" target="_blank" class="footer-title__instagram-logo">
+            <a href="#" target="_blank"  class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
@@ -262,7 +260,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
-                <a href="campaign-page.html" class="footer-menu__link-a">
+                <a href="#" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
@@ -270,14 +268,14 @@
               <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
               <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
               <li class="footer-menu__item">
-                <a href="aboutus-page.html" class="footer-menu__link-b">
+                <a href="#" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">私たちについて</p>
                 </a>
               </li>
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
-                <a href="information-page.html" class="footer-menu__link-a">
+                <a href="#" class="footer-menu__link-a">
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
